# graphite

./: .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  errors.py  example.py  graphit.py  main.py  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-improvement.yml  feature-request.yml  general-issue.yml  performance-issue.yml
.github/workflows/: docs.yml  pylint.yml  pytest.yml  python-package.yml  python-publish.yml
docs/: CONTRIBUTING.md  creating-data-model.md  development-setup.md  graph-model.md  index.md  query-engine.md  quickstart.md
docs/references/: data.md  dsl.md  engine.md  migration.md  module.md  query.md
examples/: example_suite.py  generic_example.py
src/graphite/: __init__.py  engine.py  exceptions.py  instances.py  migration.py  parser.py  query.py  serialization.py  types.py  utils.py
tests/: benchmark.py  benchmark_result.txt  conftest.py  test_integration_basic.py  test_integration_dsl.py  test_integration_persistence.py  test_placeholder.py  test_unit_engine.py  test_unit_instances.py  test_unit_migration.py  test_unit_parser.py  test_unit_query.py  test_unit_serialization.py  test_unit_types.py  test_utils.py
