[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "graphitedb"
version = "0.4"
authors = [
    { name="Mahan Khalili", email="khalili1388mahan@gmail.com" },
]
maintainers = [
    { name="Mahan Khalili", email="khalili1388mahan@gmail.com" },
]
description = "A clean, embedded graph database engine for Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Database :: Database Engines/Servers",
]
license = "MIT"
license-files = ["LICENSE"]
import-names = ["graphite"]
import-namespaces = ["graphite"]

[project.urls]
Homepage = "https://mkh-user.graphite.io/graphite"
Source = "https://github.com/mkh-user/graphite"
Download = "https://pypi.org/project/graphitedb/"
Changelog = "https://github.com/mkh-user/graphite/blob/main/CHANGELOG.md"
Releasenotes = "https://github.com/mkh-user/graphite/releases"
Documentation = "https://mkh-user.graphite.io/graphite"
Issues = "https://github.com/mkh-user/graphite/issues"
